setup auth navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,9 @@
     <string name="text_info">Info</string>
     <string name="delete">Delete</string>
 
+    <string name="forgot_password">Forgot password</string>
+    <string name="edit">Edit</string>
+
 </resources>
 
 
